<resources>
    <string name="app_name">ShareAccount</string>
    <string name="view_all">View All Account</string>
    <string name="add_new">Add New Account</string>
    <string name="accountName">Account Name</string>
    <string name="accountTitle">Account Title</string>
    <string name="accountDesc"> Description</string>
    <string name="accountDevice">Device</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="title_activity_remote_my_sql">RemoteMySQL</string>
    <string name="title_activity_update_remove">AccountUpdateRemove</string>
</resources>
