<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountUpdateOrDeleteActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="63dp"
            android:orientation="horizontal"
            android:paddingLeft="10sp">

            <TextView
                android:id="@+id/informationTitle"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/accountTitle" />

            <EditText
                android:id="@+id/accountTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Device"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/accountDevice" />

            <EditText
                android:id="@+id/accountDev"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Desc"
                android:layout_width="191dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/accountDesc" />

            <EditText
                android:id="@+id/accountDesc"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/update" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="186dp"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>